--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@editorjs/editorjs": "^2.30.8",
     "@editorjs/header": "^2.8.8",
+    "@editorjs/list": "^2.0.6",
+    "@editorjs/table": "^2.4.4",
     "@tanstack/react-query": "^5.66.7",
     "axios": "^1.7.9",
     "chess.js": "^1.1.0",
