--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@editorjs/list": "^2.0.6",
     "@editorjs/table": "^2.4.4",
     "@tanstack/react-query": "^5.66.7",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.7.9",
     "chess.js": "^1.1.0",
     "query-string": "^9.1.1",
