--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@tanstack/react-query": "^5.66.7",
     "axios": "^1.7.9",
     "chess.js": "^1.1.0",
+    "i18next": "^25.0.0",
+    "i18next-browser-languagedetector": "^8.0.5",
+    "i18next-http-backend": "^3.0.2",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-aria": "^3.37.0",
     "react-chessboard": "^4.7.2",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
