--- a/package.json
+++ b/package.json
@@ -10,21 +10,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@blocknote/core": "^0.29.1",
+    "@blocknote/mantine": "^0.29.1",
+    "@blocknote/react": "^0.29.1",
     "@editorjs/editorjs": "^2.30.8",
     "@editorjs/header": "^2.8.8",
     "@editorjs/image": "^2.10.2",
     "@editorjs/list": "^2.0.6",
     "@editorjs/table": "^2.4.4",
+    "@reduxjs/toolkit": "^2.7.0",
     "@tanstack/react-query": "^5.66.7",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.7.9",
     "chess.js": "^1.1.0",
+    "date-fns": "^4.1.0",
+    "editorjs-html": "^4.0.5",
+    "html-react-parser": "^5.2.3",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.5",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-aria": "^3.37.0",
     "react-chessboard": "^4.7.2",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.1"
+    "react-hook-form": "^7.56.1",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.5.1",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
